[gd_scene load_steps=2 format=3 uid="uid://7j7n0ku4wc6v"]

[ext_resource type="Script" path="res://Scripts/mcqs.gd" id="1_qhnxa"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_qhnxa")

[node name="Label" type="Label" parent="."]
offset_left = 52.0
offset_top = 1.0
offset_right = 997.0
offset_bottom = 159.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="VBoxContainer" parent="."]
offset_left = 79.0
offset_top = 189.0
offset_right = 967.0
offset_bottom = 350.0

[node name="Option1" type="Button" parent="Options"]
layout_mode = 2

[node name="Option2" type="Button" parent="Options"]
layout_mode = 2

[node name="Option3" type="Button" parent="Options"]
layout_mode = 2

[node name="PlankLabel" type="Label" parent="."]
offset_left = 21.0
offset_top = 123.0
offset_right = 61.0
offset_bottom = 146.0

[connection signal="pressed" from="Options/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Options/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Options/Option3" to="." method="_on_option_3_pressed"]
